
    Updated the compilation of clause heads for module multifile predicates
    in order to remove the explicit module qualification when the module is
    "user".

    Updated the implementation of the built-in predicate logtalk_compile/2
    in order to ensure the same compiler options semantics for compiled code
    as the built-in predicate logtalk_load/2.

    Corrected a error handling issue in the implementation of the built-in
    predicates logtalk_compile/2 and logtalk_load/2 where the error terms
    would be wrapped in an extra error/2 term.

    Updated the Logtalk compiler in order to also delete the intermediate
    files generated by the back-end Prolog compilers when compiling the
    Prolog files generated by Logtalk with the "clean" flag is set to "on".

    Updated the built-in objects, "logtalk" and "debugger", and the built-in
    protocols, "expanding" and "monitoring", to support static binding.

    Updated the term-expansion mechanism implementation in order to support
    the use of the {}/1 compiler bypass control construct to wrap elements
    in the list of expanded terms (returned by the term_expansion/2 built-in
    method when used in hook objects), to allow expansion of the end_of_file
    term, and to throw an instantiation error when term-expansion generates
    a list containing an element that is a variable.

    Interpret "prolog_compatible_version", "tabling", and "coinduction" as
    read-only flags. Removed documentation on the deleted "multifile_directive"
    flag. Added missing documentation on the "prolog_compatible_version" flag.

    Added support for accessing the compiler input stream using the built-in
    predicate logtalk_load_context/2 with the key "stream".

    Improved compile-time and runtime error handling for the blackboard
    built-in predicates.

    Updated the implementation of the built-in predicate set_logtalk_flag/2
    in order to switch off the clean (smart_compilation) flag when switching